--- a/src/app/MusteriDetay/musteri_detay.component.html
+++ b/src/app/MusteriDetay/musteri_detay.component.html
@@ -125,7 +125,7 @@
               <span>:</span>
             </div>
             <div class="col-md-8">
-              <a href="#" class="musteri-detay-kayit-sube-text">{{ musteri_detay.kayit_sube.sube_adi }}</a>
+              <a href="#" class=" link-blue-hover">{{ musteri_detay.kayit_sube.sube_adi }}</a>
             </div>
           </div>
           <!-- Kayıt Şubesi -->
